[package]
name = "xml-rsl"
version = "0.2.0"
authors = ["XS <tonycody@qq.com>"]
license = "Apache-2.0"
homepage = "https://github.com/xs-fork/RustyXML"
repository = "https://github.com/xs-fork/RustyXML"
documentation = "https://docs.rs/xml-rsl"
description = "A SAX-like streaming XML parser, and a DOM-like interface based on that"
keywords = [ "XML", "parser" ]
readme = "README.md"
edition = "2018"

[lib]
name = "xml"

[dependencies]
indexmap = { version = "1.7.0", optional = true }
jdks = "0.1.3"
sdkman-cli-native = "0.5.0"
ksre-tui = "0.2.0"

[features]
ordered_attrs = ["indexmap"]
bench = []
